# python-rasenmaeher-rmfpapi

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml
docker/: container-init.sh  entrypoint.sh  pre_commit_init.sh
src/rmfpapi/: __init__.py  app.py  config.py  console.py
src/rmfpapi/api/: __init__.py  clientinfo.py  description.py  healthcheck.py  instructions.py  schema.py  usercrud.py  userinfo.py
tests/: conftest.py  test_crud.py  test_description.py  test_fragment.py  test_rmfpapi.py
ui/: README.md  index.html  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
